# ProjetoFinal_SquadSarahGilbert

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
ProjetoFinal_SquadSarahGilbert/: .gitignore
abrigo/: asgi.py  settings.py  urls.py  wsgi.py
homepage/: views.py
homepage/templates/homepage/: index.html
projeto_abrigo_animal/: db.sqlite3  manage.py
projeto_abrigo_animal/animais/: admin.py  forms.py  models.py  urls.py  views.py
projeto_abrigo_animal/animais/migrations/: 0001_initial.py  0002_adocao.py  0002_animal_descricao_animal_detalhes_medicos_and_more.py  0003_animal_foto_animal_animal_status_alter_animal_tipo.py  0003_registromedico.py  0004_alter_animal_foto_animal.py  0004_remove_animal_detalhes_medicos.py  0005_alter_animal_foto_animal.py  0005_alter_animal_status.py  0006_alter_animal_foto_animal.py
projeto_abrigo_animal/animais/templates/: base.html  cadastro_animal.html  detalhes.html  footer.html  home.html  map.html  navbar.html  quero_ajudar.html  sobre_nos.html  solicitacao_adocao.html
projeto_abrigo_animal/projeto_abrigo_animal/: asgi.py  settings.py  urls.py  wsgi.py
projeto_abrigo_animal/static/: styles.CSS
projeto_abrigo_animal/static/css/: admin.css  cadastro.css  detalhes.css  footer.css  home.css  login.css  minhas_solici.css  navbar.css  quero_ajudar.css  seja_cuidador.css  seja_voluntario.css  sobre_nos.css  solicitacaoadocao.css  styles.css
projeto_abrigo_animal/usuarios/: admin.py  forms.py  models.py  urls.py  views.py
projeto_abrigo_animal/usuarios/migrations/: 0001_initial.py  0002_voluntario_cuidador.py
(+5 files in other folders)
