[tool.poetry]
name = "projetofinal-squadsarahgilbert"
version = "0.1.0"
description = ""
authors = ["jclizar <jessica_lizar@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.5"
django-bootstrap-v5 = "1.0.11"
django-multiselectfield = "^0.1.13"
django-jazzmin = "3.0.1"
pillow = "11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
